# alibaba-graph-rust

./: .env  .env.example  .gitignore  Cargo.toml  Pipfile  README.md  pyproject.toml
.cargo/: config
graph_py/: notebook.ipynb
src/: lib.rs  main.rs
src/data/: download.rs  get.rs  init.rs  mod.rs  structs.rs
src/graph/: load.rs  mod.rs  save.rs  structs.rs
src/process/: init.rs  mod.rs  op_mapper.rs  structs.rs
src/process/ops/: average_degree.rs  base_op.rs  mod.rs  number_of_vertices.rs
src/src/data/: download.rs  get.rs
src/utils/: env_params.rs  mod.rs
