[package]
name = "alibaba-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
threadpool = "1.8.1"
raphtory = "0.6.1"
tar = "0.4.40"
flate2 = "1.0.28"
