[package]
name = "alibaba-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
threadpool = "1.8.1"
raphtory = { version = "0.6.1", features = ["io"] }
tar = "0.4.40"
flate2 = "1.0.28"
serde = { version = "1.0.193", features = ["derive"] }
num-integer = "0.1.45"
serde_with = "3.4.0"
csv = "1.3.0"
rayon = "1.8.0"
log = "0.4.20"
env_logger = "0.10.1"

