[package]
name = "alibaba-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
anyhow = "1.0.79"
raphtory = { version = "0.7.0", features = ["io"] }
tar = "0.4.40"
flate2 = "1.0.28"
serde = { version = "1.0.196", features = ["derive"] }
num-integer = "0.1.46"
serde_with = "3.4.1"
csv = "1.3.0"
rayon = "1.8.1"
log = "0.4.20"
env_logger = "0.11.1"
dotenv = "0.15.0"
pyo3 = "0.20.2"
pyo3-log = "0.9.0"

[lib]
name = "alibaba_graph_rust"
crate-type = ["cdylib"]

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
